// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/.../WorkExperienceItem when editMode is false renders correctly 1`] = `
<div>
  <div
    className="profile-experience-block profile-verified-status"
  >
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
          data-tooltip="Verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
        data-tooltip="Verified"
      >
         
      </i>
      <p>
        Applied Blockchain
      </p>
      <span />
      <em>
        2017
         - 
        Present
      </em>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../WorkExperienceItem when editMode is true renders correctly 1`] = `
<div>
  <div
    className="profile-experience-block profile-verified-status"
  >
    <div
      className="profile-experience-btns"
    >
      <button
        className="edit-btn"
        onClick={[Function]}
      >
         
      </button>
    </div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
          data-tooltip="Verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
        data-tooltip="Verified"
      >
         
      </i>
      <p>
        Applied Blockchain
      </p>
      <span />
      <em>
        2017
         - 
        Present
      </em>
    </div>
  </div>
</div>
`;
